fixed picture overflow by setting 'overflow: hidden' in css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ p {
     margin: auto;
     max-width: 90%;
     height: auto;
+    overflow: hidden;
     border: 3px outset lightgray;
 }
 
